packages/example/dist/src/errors/UserProfileNotFoundError.d.ts
import { HttpError } from 'routing-controllers';
export declare class UserProfileNotFoundError extends HttpError {
    constructor();
}
